# JraRawDataImporter

./: .gitignore  README.md  archive_store.py  config.py  job_runner.py  job_state.py  jvlink_session.py  main.py  pyproject.toml  raw_writer.py  sync_state.py
csharp-poc/JvLinkRawDownloader.Poc/: JvLinkRawDownloader.Poc.csproj  Program.cs
docs/: current-architecture.md  python-vs-csharp-comparison.md
jvlink_raw_fetcher/: __init__.py  app_config.py  cli.py  platform.py
tests/: test_platform_doctor.py  test_runner_resume.py  test_storage_contract.py
